hoo boy been a minute

--- a/query cities.ipynb
+++ b/query cities.ipynb
@@ -281,28 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e096c03e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Aberdeen', ' SD Micro Area']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df.area_name.str.split(\",\")[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "e10f3cca",
    "metadata": {},
    "outputs": [
@@ -314,7 +303,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "id": "649734bc",
    "metadata": {},
    "outputs": [
@@ -405,7 +394,7 @@
        "percentile           0.325175            0.84965                    0.500000  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "id": "07a303c5",
    "metadata": {},
    "outputs": [
@@ -546,13 +535,104 @@
        "percentile            0.91958           0.265734                    0.223776  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "eval_city(trim_df, \"Miami\", \"FL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ec2468bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Burl, NC stats:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_name</th>\n",
+       "      <th>p_black</th>\n",
+       "      <th>p_unmarried_20_24_female</th>\n",
+       "      <th>median_income_males_living_alone</th>\n",
+       "      <th>median_rent_1_bed</th>\n",
+       "      <th>percent_obese_fem</th>\n",
+       "      <th>p_not_enrolled_given_20_24</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>raw</th>\n",
+       "      <td>Burlington, NC Metro Area</td>\n",
+       "      <td>0.195476</td>\n",
+       "      <td>0.519306</td>\n",
+       "      <td>29564.000000</td>\n",
+       "      <td>629.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>0.515622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>percentile</th>\n",
+       "      <td>Burlington, NC Metro Area</td>\n",
+       "      <td>0.811189</td>\n",
+       "      <td>0.993007</td>\n",
+       "      <td>0.157343</td>\n",
+       "      <td>0.223776</td>\n",
+       "      <td>0.867133</td>\n",
+       "      <td>0.206294</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            area_name   p_black  p_unmarried_20_24_female  \\\n",
+       "raw         Burlington, NC Metro Area  0.195476                  0.519306   \n",
+       "percentile  Burlington, NC Metro Area  0.811189                  0.993007   \n",
+       "\n",
+       "            median_income_males_living_alone  median_rent_1_bed  \\\n",
+       "raw                             29564.000000         629.000000   \n",
+       "percentile                          0.157343           0.223776   \n",
+       "\n",
+       "            percent_obese_fem  p_not_enrolled_given_20_24  \n",
+       "raw                 37.000000                    0.515622  \n",
+       "percentile           0.867133                    0.206294  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_city(trim_df, \"Burl\", \"NC\")"
    ]
   },
   {
@@ -2882,7 +2962,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2896,7 +2976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
